--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@components/*": ["components/*"],
       "@layouts/*": ["layouts/*"],
       "@assets/*": ["assets/*"],
-      "@pages/*": ["pages/*"]
+      "@pages/*": ["pages/*"],
+      "@icons/*": ["icons/*"],
     }
   }
 }
